<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Onboarding.LoginFragment"
    android:orientation="vertical"
    android:background="@color/colorWhite">

    <ImageView
        android:id="@+id/imgLog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        android:layout_marginLeft="230dp"
        android:layout_marginTop="-140dp"
        android:src="@drawable/img3" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textDesc1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/tip1"
                android:textSize="18sp"
                android:layout_gravity="center"
                android:textColor="@color/colorNaranja"
                android:gravity="center"
                android:fontFamily="@font/aclonica"/>

            <TextView
                android:id="@+id/textDesc2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/tip2"
                android:textSize="18sp"
                android:layout_gravity="center"
                android:textColor="@color/colorNaranja"
                android:gravity="center"
                android:fontFamily="@font/aclonica"/>

            <TextView
                android:id="@+id/textDesc3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/tip3"
                android:textSize="18sp"
                android:layout_gravity="center"
                android:textColor="@color/colorNaranja"
                android:gravity="center"
                android:fontFamily="@font/aclonica"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btMensBasic"
                    android:layout_width="100sp"
                    android:layout_height="40sp"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="10dp"
                    android:text="@string/mens"
                    android:background="@drawable/styles_btn"
                    android:textColor="@color/colorWhite"
                    android:fontFamily="@font/aclonica">
                </Button>

                <Button
                    android:id="@+id/btSelectBasic"
                    android:layout_width="100sp"
                    android:layout_height="40sp"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="10dp"
                    android:text="@string/select"
                    android:background="@drawable/styles_btn"
                    android:textColor="@color/colorWhite"
                    android:fontFamily="@font/aclonica">
                </Button>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btMensCientif"
                    android:layout_width="100sp"
                    android:layout_height="40sp"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="10dp"
                    android:text="@string/mens"
                    android:background="@drawable/styles_btn"
                    android:textColor="@color/colorWhite"
                    android:fontFamily="@font/aclonica">
                </Button>

                <Button
                    android:id="@+id/btSelectCient"
                    android:layout_width="100sp"
                    android:layout_height="40sp"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="10dp"
                    android:text="@string/select"
                    android:background="@drawable/styles_btn"
                    android:textColor="@color/colorWhite"
                    android:fontFamily="@font/aclonica">
                </Button>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">



                <Button
                    android:id="@+id/btMensCustom"
                    android:layout_width="100sp"
                    android:layout_height="40sp"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="10dp"
                    android:text="@string/mens"
                    android:background="@drawable/styles_btn"
                    android:textColor="@color/colorWhite"
                    android:fontFamily="@font/aclonica">
                </Button>

                <Button
                    android:id="@+id/btSelectCust"
                    android:layout_width="100sp"
                    android:layout_height="40sp"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="10dp"
                    android:text="@string/select"
                    android:background="@drawable/styles_btn"
                    android:textColor="@color/colorWhite"
                    android:fontFamily="@font/aclonica">
                </Button>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">
        <EditText
            android:id="@+id/etType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:hint="@string/app"
            android:background="@drawable/style_et"
            android:fontFamily="@font/aclonica"
            android:textAlignment="center">

        </EditText>

        <EditText
            android:id="@+id/etUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:hint="@string/username"
            android:background="@drawable/style_et"
            android:fontFamily="@font/aclonica"
            android:textAlignment="center">

        </EditText>

        <Button
            android:id="@+id/btLogin"
            android:layout_width="150sp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:text="@string/login"
            android:background="@drawable/styles_btn"
            android:textColor="@color/colorWhite"
            android:fontFamily="@font/aclonica">

        </Button>
    </LinearLayout>

</LinearLayout>